--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.deorigami.github.io/Indosoft",
+  "homepage": "https://deorigami.github.io/Indosoft/",
   "name": "test",
   "version": "0.1.0",
   "private": true,
